[metadata]
name = wrun_py
version = 0.1.0-1
description = Web executable launcher
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scop/wrun
author = Ville Skyttä
author_email = ville.skytta@iki.fi
license = Apache License 2.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Go
    Topic :: Internet :: WWW/HTTP
    Topic :: Utilities

[options]
packages =
python_requires = >=3.8
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [wrun]
    group = wrun-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/scop/wrun/releases/download/v0.1.0/wrun_0.1.0_darwin_amd64
    sha256 = c08464f06e41014c478a663980e17f06d189fe474cb77e0c37bf041caea5278d
    [wrun]
    group = wrun-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/scop/wrun/releases/download/v0.1.0/wrun_0.1.0_darwin_arm64
    sha256 = 8d857dc127f3978f09c1eadc87965f465cf422107c1c5a97aa4aa56201b37a1c
    [wrun]
    group = wrun-binary
    marker = sys_platform == "linux" and platform_machine == "i386"
    marker = sys_platform == "linux" and platform_machine == "i686"
    url = https://github.com/scop/wrun/releases/download/v0.1.0/wrun_0.1.0_linux_386
    sha256 = 4aa6ddf3ac6b6e09a4900a9d481137f893311accf6e0ba51d3ce2994e6afb768
    [wrun]
    group = wrun-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/scop/wrun/releases/download/v0.1.0/wrun_0.1.0_linux_amd64
    sha256 = e6b2896038b13d43b36464629cd9d764b9c51865a68cd837990ee63eae2cd0bb
    [wrun]
    group = wrun-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/scop/wrun/releases/download/v0.1.0/wrun_0.1.0_linux_arm64
    sha256 = d417e2f4ff7cca6c4120c5476703e3aacf34821dfc07d35e911c36b4bd9817da
    [wrun]
    group = wrun-binary
    marker = sys_platform == "linux" and platform_machine == "armv6hf"
    marker = sys_platform == "linux" and platform_machine == "armv7l"
    url = https://github.com/scop/wrun/releases/download/v0.1.0/wrun_0.1.0_linux_armv6
    sha256 = 14058ca2be43f591914e473dee5c14b800d362b88c89908aa48e821b774741ae
    [wrun.exe]
    group = wrun-binary
    marker = sys_platform == "win32" and platform_machine == "x86"
    marker = sys_platform == "cygwin" and platform_machine == "i386"
    url = https://github.com/scop/wrun/releases/download/v0.1.0/wrun_0.1.0_windows_386.exe
    sha256 = 0b9d7ebf282a2cec123646dde8eb28fac8bf711690146eb36f2523a0eabb22f6
    [wrun.exe]
    group = wrun-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/scop/wrun/releases/download/v0.1.0/wrun_0.1.0_windows_amd64.exe
    sha256 = 895fac34ee73f7f2b9883144fe7906ea6391ee8944b2a479d3bfc949e52ee607
