[metadata]
name = wrun_py
version = 0.2.0-1
description = Web executable launcher
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scop/wrun
author = Ville Skyttä
author_email = ville.skytta@iki.fi
license = Apache License 2.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    # https://github.com/pypa/trove-classifiers/pull/159
    #Programming Language :: Go
    Topic :: Internet :: WWW/HTTP
    Topic :: Utilities

[options]
packages =
python_requires = >=3.8
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [wrun]
    group = wrun-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/scop/wrun/releases/download/v0.2.0/wrun_0.2.0_darwin_amd64
    sha256 = 81024935283d76ed47694cc792009a7c4e3e9f77b2eaf0f6ace1f4716fbb313c
    [wrun]
    group = wrun-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/scop/wrun/releases/download/v0.2.0/wrun_0.2.0_darwin_arm64
    sha256 = d19dba337876b24643344eccc9760e05df196e8eba79912b65ec5f47450efd09
    [wrun]
    group = wrun-binary
    marker = sys_platform == "linux" and platform_machine == "i386"
    marker = sys_platform == "linux" and platform_machine == "i686"
    url = https://github.com/scop/wrun/releases/download/v0.2.0/wrun_0.2.0_linux_386
    sha256 = 8fdd51b3fec1d1b2f1392a07ba1288c48f24921deb7a63650786b6b972bc9255
    [wrun]
    group = wrun-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/scop/wrun/releases/download/v0.2.0/wrun_0.2.0_linux_amd64
    sha256 = adca47b79ff70f49eca71bef6a134348c53b96183dd79a499e5b946825e22f93
    [wrun]
    group = wrun-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/scop/wrun/releases/download/v0.2.0/wrun_0.2.0_linux_arm64
    sha256 = d95c627f10fc0e3175b2606622631e4b1f65d7a425e5126cfe1c9f95035754e5
    [wrun]
    group = wrun-binary
    marker = sys_platform == "linux" and platform_machine == "armv6hf"
    marker = sys_platform == "linux" and platform_machine == "armv7l"
    url = https://github.com/scop/wrun/releases/download/v0.2.0/wrun_0.2.0_linux_armv6
    sha256 = b50b4dafc235b268c10381d1fbe4512028396d0a98c3de7a691064617454b6a6
    [wrun.exe]
    group = wrun-binary
    marker = sys_platform == "win32" and platform_machine == "x86"
    marker = sys_platform == "cygwin" and platform_machine == "i386"
    url = https://github.com/scop/wrun/releases/download/v0.2.0/wrun_0.2.0_windows_386.exe
    sha256 = 480d3012a005b285eb5350db183637049ef5cda698ad36b4cb2eaa7efbc2ea36
    [wrun.exe]
    group = wrun-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/scop/wrun/releases/download/v0.2.0/wrun_0.2.0_windows_amd64.exe
    sha256 = cffcbcf3e297380022b65a499eff0b3838d9be509babdb939324befae00b8240
