[metadata]
name = wrun_py
version = 0.2.1-1
description = Web executable launcher
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scop/wrun
author = Ville Skyttä
author_email = ville.skytta@iki.fi
license = Apache License 2.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    # https://github.com/pypa/trove-classifiers/pull/159
    #Programming Language :: Go
    Topic :: Internet :: WWW/HTTP
    Topic :: Utilities

[options]
packages =
python_requires = >=3.8
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [wrun]
    group = wrun-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/scop/wrun/releases/download/v0.2.1/wrun_0.2.1_darwin_amd64
    sha256 = a0f38144ea8696837393e790a96807140e0392e5a2bfef71532f4726602082e9
    [wrun]
    group = wrun-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/scop/wrun/releases/download/v0.2.1/wrun_0.2.1_darwin_arm64
    sha256 = fc628331d9a382ca00c7474434688bbb5250e90c4750ffb8b66d32bae71a19e1
    [wrun]
    group = wrun-binary
    marker = sys_platform == "linux" and platform_machine == "i386"
    marker = sys_platform == "linux" and platform_machine == "i686"
    url = https://github.com/scop/wrun/releases/download/v0.2.1/wrun_0.2.1_linux_386
    sha256 = 70e592d87348afae322aedc18e36e121de55f352f163ef44b62037d4c6f8e72a
    [wrun]
    group = wrun-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/scop/wrun/releases/download/v0.2.1/wrun_0.2.1_linux_amd64
    sha256 = 8fa6a96ebfd3ae46769c29b3b5b194fcdca98ae6349e54a466f190484355e582
    [wrun]
    group = wrun-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/scop/wrun/releases/download/v0.2.1/wrun_0.2.1_linux_arm64
    sha256 = ac5baa72d5cfc488aaddde840a35f37ce308b724d5acc96782a557260569fcbb
    [wrun]
    group = wrun-binary
    marker = sys_platform == "linux" and platform_machine == "armv6hf"
    marker = sys_platform == "linux" and platform_machine == "armv7l"
    url = https://github.com/scop/wrun/releases/download/v0.2.1/wrun_0.2.1_linux_armv6
    sha256 = d6f70092736fcf25e3bb5634a822be479a12eeffbb1a2092c22ce14fed7336dc
    [wrun.exe]
    group = wrun-binary
    marker = sys_platform == "win32" and platform_machine == "x86"
    marker = sys_platform == "cygwin" and platform_machine == "i386"
    url = https://github.com/scop/wrun/releases/download/v0.2.1/wrun_0.2.1_windows_386.exe
    sha256 = 5109ad7157598b00ba86d609ac3bf7cc009575d12ef07fa9b9947fed4ece8bbc
    [wrun.exe]
    group = wrun-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/scop/wrun/releases/download/v0.2.1/wrun_0.2.1_windows_amd64.exe
    sha256 = d960ddd763c978790b5fdb1bd9c95de70e5b02df7fcd242b737f2d08eda8eafe
